--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: generic
 
 install:
-    - wget curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl -O /tmp/kubectl
+    - wget https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl -O /tmp/kubectl
     - chmod +x /tmp/kubectl
     - https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 -O /tmp/get-helm-3 
     - chmod +x /tmp/get-helm-3
