--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
     - /tmp/get-helm-3
     - export PATH=$PATH:/tmp
 
-script:
+before_deploy:
     make
 
 deploy: # Deploy documentation to Github in the gh_pages branch
