--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 script: true
 
 before_deploy:
-    - ./build_travis.sh
+    - ./scripts/build_travis.sh
 
 deploy: # Deploy documentation to Github in the gh_pages branch
     provider: pages
