--- a/stable/spark/values.yaml
+++ b/stable/spark/values.yaml
@@ -1,32 +1,33 @@
-Spark:
-    Path: /opt/spark
+#Spark:
+#   path: /opt/spark
+
 
 externalIP:
     enabled: true
     ip: 192.168.65.3 
 
-Master:
-    Name: master
-    Image: cloudpg/spark-py
-    ImageTag: dodas-2.4.3-bigdl
-    Replicas: 1
-    Component: spark-master
-    Cpu: 100m
-    Memory: 1024Mi
-    ServicePort: 7077
-    ContainerPort: 7077
+master:
+    name: master
+    image: cloudpg/spark-py
+    imageTag: dodas-2.4.3-bigdl
+    replicas: 1
+    component: spark-master
+    cpu: 100m
+    memory: 1024Mi
+    servicePort: 7077
+    containerPort: 7077
     # Set Master JVM memory. Default 1g
     # DaemonMemory: 1g
-    ServiceType: NodePort
-    Jupyter:
-        NodePort: 30888
+    serviceType: NodePort
+    jupyter:
+        nodePort: 30888
 
-WebUi:
-  Name: webui
-  ServicePort: 8080
-  ContainerPort: 8080
-  NodePort: 30808
-  ServiceType: NodePort
+webUi:
+  name: webui
+  servicePort: 8080
+  containerPort: 8080
+  nodePort: 30808
+  serviceType: NodePort
 
 hostPath: 
     path: /tmp
