added token as value

--- a/stable/spark/values.yaml
+++ b/stable/spark/values.yaml
@@ -24,6 +24,7 @@ master:
     serviceType: NodePort
     jupyter:
         nodePort: 30888
+        token: testme
 
 # WebUi service configuration values
 webUi:
