--- a/stable/spark/templates/spark-master-deployment.yaml
+++ b/stable/spark/templates/spark-master-deployment.yaml
@@ -120,7 +120,7 @@ spec:
             - name: PYSPARK_DRIVER_PYTHON
               value: ipython
             - name: PYSPARK_DRIVER_PYTHON_OPTS
-              value: "notebook --NotebookApp.token='testme'"
+              value: "notebook --NotebookApp.token={{ .Values.master.jupyter.token }}"
           image: "cloudpg/spark-notebook:k8s-py3.6" 
           ports:
           - containerPort: 8888
