--- a/stable/spark/values.yaml
+++ b/stable/spark/values.yaml
@@ -1,4 +1,4 @@
-# Default values for cachingondemand.
+# Default values for Spark.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
