--- a/stable/cachingondemand/templates/cache-proxy-svc.yml
+++ b/stable/cachingondemand/templates/cache-proxy-svc.yml
@@ -17,8 +17,7 @@ spec:
     nodePort: {{ .Values.proxy.service.xrootd.nodePort }}
     {{- end}}
   {{- if .Values.externalIp.enabled }}
-  externalIPs:
-  - {{ .Values.externalIp }}
+  externalIPs: {{ .Values.externalIp.ips }}
   {{ - end}}
 
 {{- end }}
