--- a/stable/cachingondemand/templates/fake-origin-svc.yaml
+++ b/stable/cachingondemand/templates/fake-origin-svc.yaml
@@ -17,8 +17,7 @@ spec:
     nodePort: {{ .Values.fakeOrigin.service.xrootd.nodePort }}
     {{- end}}
   {{- if .Values.externalIp.enabled }}
-  externalIPs:
-  - {{ .Values.externalIp }}
+  externalIPs: {{ .Values.externalIp.ips }}
   {{ - end}}
 
 {{- end }}
