--- a/stable/cachingondemand/templates/fake-origin-pod.yml
+++ b/stable/cachingondemand/templates/fake-origin-pod.yml
@@ -1,3 +1,4 @@
+{{- if .Values.fakeOrigin.enabled }}
 apiVersion: app/v1
 kind: Deployment
 metadata:
@@ -25,4 +26,4 @@ spec:
         imagePullPolicy: Always
         name: origin
 
-
+{{- end }}
