--- a/stable/cachingondemand/Chart.yaml
+++ b/stable/cachingondemand/Chart.yaml
@@ -1,5 +1,12 @@
 apiVersion: v1
-appVersion: "1.0"
+appVersion: "4.11"
 description: A Helm chart for the deployment of a XCache cluster
 name: cachingondemand
 version: 1.0.3
+icon: https://xrootd.slac.stanford.edu/images/xrootd-logo.png 
+maintainers:
+  - name: Diego Ciangottini
+    email: diego.ciangottini@pg.infn.it
+  - name: Daniele Spiga
+    email: daniele.spiga@pg.infn.it
+home: https://dodas-ts.github.io/helm_charts/stable/cachingondemand/
