--- a/stable/spark/Chart.yaml
+++ b/stable/spark/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: spark
-version: 1.0.0
+version: 2.4.4
 appVersion: 1.5.1
 description: Fast and general-purpose cluster computing system.
 home: http://spark.apache.org
@@ -9,5 +9,5 @@ sources:
   - https://github.com/kubernetes/kubernetes/tree/master/examples/spark
   - https://github.com/apache/spark
 maintainers:
-  - name: lachie83
-    email: lachlan.evenson@gmail.com
+  - name: ttedeschi
+    email: tedesk95@gmail.com
