--- a/stable/htcondor/templates/htc-wn-pod.yaml
+++ b/stable/htcondor/templates/htc-wn-pod.yaml
@@ -1,78 +1,39 @@
-{{- if .Values.nfs.enabled -}}
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: nfs
-spec:
-  capacity:
-    storage: "{{.Values.nfs.size}}"
-  accessModes:
-    - ReadWriteMany
-  nfs:
-    server: "{{.Values.nfs.server}}"
-    path: "{{.Values.nfs.path}}"
-{{- end }}
-
----
-
-{{- if .Values.nfs.enabled -}}
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: nfs
-spec:
-  accessModes:
-    - ReadWriteMany
-  storageClassName: ""
-  resources:
-    requests:
-      storage: "{{.Values.nfs.size}}"
-{{- end }}
-
----
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wn-pod
   labels:
-    app: wn
+    app.kubernetes.io/name: wn-pod
 spec:
   template:
     metadata:
       labels:
-        app: wn
+        app.kubernetes.io/name: wn
     spec:
       dnsPolicy: None
       dnsConfig:
         nameservers:
         - 8.8.8.8
       affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: condor
-                operator: NotIn
-                values:
-                - ccb
-                - schedd
+        {{- if .Values.htcWn.nodeSelector }}
+        {{ .Values.htcWn.nodeSelector }}
+        {{- end }}
       containers:
       - name: wn
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.htcWn.pullPolicy }}
         args:
         - wn 
         env:
         - name: CONDOR_HOST 
-          value: "{{ .Values.CONDOR_HOST }}"
+          value: "{{ .Values.condorHost }}"
         - name: PROXY_CACHE 
-          value: "{{ .Values.PROXY_CACHE }}:{{ .Values.PROXY_CACHE_Port }}"
+          value: "{{ .Values.proxyCacheHost }}:{{ .Values.proxyCachePort }}"
         - name: CCB_ADDRESS
-          value:  "{{ .Values.CCB_HOST }}"
+          value:  "{{ .Values.ccbHost }}"
         - name: SLOT_TYPE_1
-          value: "{{ .Values.SLOT_TYPE_1 }}"
+          value: "{{ .Values.htcWn.slotType }}"
 
-        image: "{{ .Values.condor_image }}"
+        image: "{{ .Values.htcWn.image }}:{{ .Values.htcWn.tag }}"
         livenessProbe:
           exec:
             command:
@@ -84,11 +45,11 @@ spec:
           periodSeconds: 600
         resources:
           limits:
-            memory: "2500Mi"
-            cpu: "1.5"
+            memory: "{{ .Values.htcWn.ram.limit }}"
+            cpu: "{{ .Values.htcWn.cpu.limit }}"
           requests: 
-            memory: "2048Mi"
-            cpu: "1"
+            memory: "{{ .Values.htcWn.ram.request }}"
+            cpu: "{{ .Values.htcWn.cpu.request }}"
         volumeMounts:
 {{- if .Values.nfs.enabled -}}
         - name: nfs
@@ -114,6 +75,6 @@ spec:
 
   selector:
     matchLabels:
-      app: wn 
+      app.kubernetes.io/name: wn 
 
-  replicas: 1
+  replicas: {{ .Values.htcWn.replicas }}
