--- a/stable/htcondor/templates/tts-pod.yaml
+++ b/stable/htcondor/templates/tts-pod.yaml
@@ -12,15 +12,15 @@ spec:
         app.kubernetes.io/name: tts
     spec: 
       affinity:
-        {{- if .Values.htcMaster.nodeSelector }}
-        {{ .Values.htcMaster.nodeSelector }}
-        {{- end }}
+{{- if .Values.htcMaster.nodeSelector }}
+{{ .Values.htcMaster.nodeSelector | indent 8 }}
+{{- end }}
       dnsConfig:
         nameservers:
         - 8.8.8.8
       containers: 
       - name: tts-cache
-        imagePullPolicy: {{ .Values.ttsCache.pullPolicy }}
+        imagePullPolicy: "{{ .Values.ttsCache.pullPolicy }}"
         env: 
         - name: IAM_TOKEN
           value:  "{{ .Values.ttsCache.iamToken }}"
