--- a/stable/htcondor/templates/htc-schedd-pv.yaml
+++ b/stable/htcondor/templates/htc-schedd-pv.yaml
@@ -14,7 +14,7 @@ spec:
   - ReadWriteOnce
   persistentVolumeReclaimPolicy: Delete
   storageClassName: {{ .Values.htcSchedd.persistence.storageClass }}
-  {{- if  .Values.htcSchedd.persistence.options }}
-  {{ .Values.htcSchedd.persistence.options }}
-  {{- end }}
+{{- if  .Values.htcSchedd.persistence.options }}
+{{ .Values.htcSchedd.persistence.options | indent 2 }}
+{{- end }}
 {{- end }}
